test/kubernetes/e2e/features/route_options/testdata/basic-rto-multiple-targetref.yaml
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: basic-rto-targetref
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: httproute1
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: httproute2
  options:
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: foo
          value: basic-rto-targetref
